Screen Components/CSV to Custom Metadata Records Component/objects/DummyCMDTType__mdt/DummyCMDTType__mdt.object-meta.xml
<CustomObject>
    <description>Used to pass the Apex test named, CSVToCMDTRecordsControllerTest, successfully. 
It can be deleted after the installation of the package and you can update the &apos;cmdtApiName&apos; with API name of your CMDT type in the CSVToCMDTRecordsControllerTest Apex class.</description>
    <label>DummyCMDT Type</label>
    <pluralLabel>DummyCMDT Types</pluralLabel>
</CustomObject>