Screen Components/CSV to Custom Metadata Records Component/objects/DummyCMDTType__mdt/fields/BooleanField__c.field-meta.xml
<CustomField>
    <fullName>BooleanField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BooleanField</label>
    <type>Checkbox</type>
</CustomField>