Screen Components/CSV to Custom Metadata Records Component/objects/DummyCMDTType__mdt/fields/DateField__c.field-meta.xml
<CustomField>
    <fullName>DateField__c</fullName>
    <label>DateField</label>
    <type>Date</type>
</CustomField>