Screen Components/CSV to Custom Metadata Records Component/objects/DummyCMDTType__mdt/fields/DateTimeField__c.field-meta.xml
<CustomField>
    <fullName>DateTimeField__c</fullName>
    <label>DateTimeField</label>
    <type>DateTime</type>
</CustomField>