Screen Components/CSV to Custom Metadata Records Component/objects/DummyCMDTType__mdt/fields/EmailField__c.field-meta.xml
<CustomField>
    <fullName>EmailField__c</fullName>
    <label>EmailField</label>
    <type>Email</type>
</CustomField>