Screen Components/CSV to Custom Metadata Records Component/objects/DummyCMDTType__mdt/fields/NumberField__c.field-meta.xml
<CustomField>
    <fullName>NumberField__c</fullName>
    <label>NumberField</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>