Screen Components/CSV to Custom Metadata Records Component/objects/DummyCMDTType__mdt/fields/PhoneField__c.field-meta.xml
<CustomField>
    <fullName>PhoneField__c</fullName>
    <label>PhoneField</label>
    <type>Phone</type>
</CustomField>