Screen Components/CSV to Custom Metadata Records Component/objects/DummyCMDTType__mdt/fields/PicklistField__c.field-meta.xml
<CustomField>
    <fullName>PicklistField__c</fullName>
    <label>PicklistField</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
                <default>true</default>
                <label>Value1</label>
            </value>
            <value>
                <fullName>Value2</fullName>
            </value>
            <value>
                <fullName>Value3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>