Screen Components/CSV to Custom Metadata Records Component/objects/DummyCMDTType__mdt/fields/TextField__c.field-meta.xml
<CustomField>
    <fullName>TextField__c</fullName>
    <label>TextField</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>